--- a/main.html
+++ b/main.html
@@ -9,7 +9,24 @@
 </head>
 <body>
     <!-- add table here -->
-
+   <table >
+	   <tr>
+		   <th>NAME</th>
+		   <th>KILLS</th>
+		   <th>SAVED</th>
+		   <th>DEATHS</th>
+		   <th>REVIVES</th>
+		   <th>WIN</th>
+	   </tr>
+	   <tr>
+		   <td>Hackman</td>
+		   <td>10</td>
+		   <td>0</td>
+		   <td>1</td>
+		   <td>0</td>
+		   <td>0</td>
+	   </tr>
+   </table>
         
 </body>
 </html>
