--- a/main.html
+++ b/main.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <!-- add table here -->
-   <table >
-	   <tr>
+   <table style =" width : 100% ">
+   <header >
+	   <tr style=" background-color:#1167b1" >
 		   <th>NAME</th>
 		   <th>KILLS</th>
 		   <th>SAVED</th>
@@ -18,6 +19,9 @@
 		   <th>REVIVES</th>
 		   <th>WIN</th>
 	   </tr>
+   </header>
+	   
+	<tbody>
 	   <tr>
 		   <td>Hackman</td>
 		   <td>10</td>
@@ -26,6 +30,32 @@
 		   <td>0</td>
 		   <td>0</td>
 	   </tr>
+	    <tr style="background-color:#DCDCDC" >
+		   <td>Cool Doggo</td>
+		   <td>13</td>
+		   <td>4</td>
+		   <td>8</td>
+		   <td>7</td>
+		   <td>1</td>
+	   </tr>
+	    <tr>
+		   <td>Andrews</td>
+		   <td>19</td>
+		   <td>4</td>
+		   <td>8</td>
+		   <td>7</td>
+		   <td>1</td>
+	   </tr>
+
+	    <tr style="background-color:#DCDCDC" >
+		   <td>Strawberry</td>
+		   <td>2</td>
+		   <td>9</td>
+		   <td>3</td>
+		   <td>5</td>
+		   <td>1</td>
+	   </tr>
+	</tbody> 
    </table>
         
 </body>
