--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body>
     <!-- add table here -->
    <table style =" width : 100% ">
-   <header >
+   <thead >
 	   <tr style=" background-color:#1167b1" >
 		   <th>NAME</th>
 		   <th>KILLS</th>
@@ -19,7 +19,7 @@
 		   <th>REVIVES</th>
 		   <th>WIN</th>
 	   </tr>
-   </header>
+   </thead>
 	   
 	<tbody>
 	   <tr>
